simplify code for choosing final list of events to use in PD haplotypes